# data-engineering-bootcamp

./: .gitignore  dogs.json
00-bootcamp-project/: data-engineer-bootcamp-416105-378e0ec03e71.json  data-engineer-bootcamp-416105-7b0ce102eddf.json  docker-compose.yaml  load_data_to_gcs_then_bigquery.py  main-api.py  main-postgres.py  main-sftp.py  pyproject.toml
00-bootcamp-project/dags/: greenery_addresses_data_pipeline.py  greenery_dbt_dag.py  greenery_events_data_pipeline.py  greenery_order_items_data_pipeline.py  greenery_products_data_pipeline.py  greenery_promos_data_pipeline.py
00-bootcamp-project/dbt/greenery/: .user.yml  profiles.yml
00-bootcamp-project/dbt/greenery/models/: my_users.sql
00-bootcamp-project/dbt/greenery/models/staging/greenery/: _models.yml  _src.yml  stg_greenery__order_items.sql
00-bootcamp-project/dbt/greenery/tests/: assert_phone_number_length_should_be_12.sql
01-introduction-to-data-engineering/workshops/data-engineering-lifecycle/: dogs.json  main.py
04-data-pipelines-with-apache-airflow/: README.md
04-data-pipelines-with-apache-airflow/dags/: dag_with_custom_task_dependencies.py  every_lottery_dag.py  every_monday_dag.py  every_tuesday_830_dag.py  everyday_dag.py  example_dag_1.py  play_with_airflow_connections_and_hooks.py  play_with_airflow_connections_and_hooks_2.py  play_with_templating.py
07-end-to-end-project/dags/: movement-2024-03-24.csv  movements-2024-03-24.csv  networkrail_dbt_dag.py  networkrail_movements_to_gcs_and_then_bigquery.py
docs/img/: test.md
my_project/: main.py  pyproject.toml
(+17 files in other folders)
