[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["KraiCh <krai020913@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
pandas = "2.2.0"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
